# Training-LangChainAgenticUdemy

./: .env_template  .gitignore  README.md  pyproject.toml
01_HelloWorld/: information.txt  main.py
02-ReAct/: 01-main_tavily.py  02-main_langchain_tavily.py  03-main_pydantic.py
03-AgentsUnderTheHood/: 01-main_agent_loop_langchain_tool_calling.py  01_agent_loop_langchain_tool_calling.py  02_agent_loop_raw_function_calling.py  03_raw_react_prompt.py
04-RAG/: ingestion.py  main.py  mediumblog1.txt
05-RAGProject/: ingestion.py
05-RAGProject/backend/: core.py
05-RAGProject/chroma_db/: chroma.sqlite3
06-LangGraph/: main.py  nodes.py  react.py
07-ReflectionAgent/: chains.py  graph.md  main.py
08_ReflexionAgent/: chains.py  graph.md  main.py  schemas.py  tool_executor.py
09_AgenticRAG/: ingestion.py  main.py
09_AgenticRAG/.chroma/: chroma.sqlite3
09_AgenticRAG/graph/: graph.py  main.py
09_AgenticRAG/graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  router.py
09_AgenticRAG/graph/chains/tests/: test_chains.py
09_AgenticRAG/graph/nodes/: generate.py  grade_documents.py  retrieve.py  web_search.py
10_MCP/: langchain_client.py  main.py
10_MCP/servers/: math_server.py  weather_server.py
